[gd_scene load_steps=7 format=3 uid="uid://dfjqm0ibsvtdx"]

[ext_resource type="Texture2D" uid="uid://ckpe0bypnjsoj" path="res://Abilities/Cross_attack.png" id="1_afse7"]
[ext_resource type="Script" path="res://Abilities/cross.gd" id="1_aorqa"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hrnuv"]

[sub_resource type="Animation" id="Animation_s2so7"]
resource_name = "spin"
length = 0.533337
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CrossAttack:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4, 0.533333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.785398, 1.5708, 2.35619, 3.14159]
}

[sub_resource type="Animation" id="Animation_baww4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CrossAttack:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jwdrd"]
_data = {
"RESET": SubResource("Animation_baww4"),
"spin": SubResource("Animation_s2so7")
}

[node name="Cross" type="Area2D"]
top_level = true
collision_layer = 0
collision_mask = 2
script = ExtResource("1_aorqa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hrnuv")

[node name="CrossAttack" type="Sprite2D" parent="."]
position = Vector2(-2.38419e-07, -2.38419e-07)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_afse7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jwdrd")
}

[node name="HoverTime" type="Timer" parent="."]

[node name="HoverDamageTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="HoverTime" to="." method="_on_hover_time_timeout"]
[connection signal="timeout" from="HoverDamageTimer" to="." method="_on_hover_damage_timer_timeout"]
